--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -4,9 +4,9 @@ name: Test App
 
 on: 
   push:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
 
 jobs:
   test-app:
