--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -3,9 +3,9 @@
 name: Build Image
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches:
+      - master
      
 jobs:
   build-image:
