--- a/.github/workflows/show-ip.yml
+++ b/.github/workflows/show-ip.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Show IP
-        run: theIP=$(curl https://ifconfig.co/) echo "Hello the IP is $theIP"
+        run: theIP=$(curl https://ifconfig.co/) echo "Hello the IP is ${theIP}"
