--- a/.github/workflows/show-ip.yml
+++ b/.github/workflows/show-ip.yml
@@ -7,7 +7,8 @@ jobs:
   Show-IP:
     runs-on: ubuntu-latest
     steps:
-      - name: Get the IP
-        run: echo "theIP=$(curl https://ifconfig.co/)" >> $GITHUB_ENV
-      - name: Echo the IP
-        run: echo "Hello the IP is ${{ env.theIP }}"
+    - name: Get the IP
+      id: vars
+      run: echo "theIP=$(curl https://ifconfig.co/)" >> $GITHUB_ENV
+    - name: Echo the IP
+      run: echo "Hello the IP is ${{ env.theIP }}"
