--- a/.github/workflows/show-ip.yml
+++ b/.github/workflows/show-ip.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Get the IP
-      id: vars
+      run: curl https://ifconfig.co/
+    - name: Get the IP
       run: echo "theIP=$(curl https://ifconfig.co/)" >> $GITHUB_ENV
     - name: Echo the IP
       run: echo "Hello the IP is ${{ env.theIP }}"
