--- a/.github/workflows/ipconfig-reboot.yaml
+++ b/.github/workflows/ipconfig-reboot.yaml
@@ -16,23 +16,8 @@ jobs:
       OCI_CLI_KEY_CONTENT: ${{ secrets.OCI_CLI_KEY_CONTENT }}
       OCI_CLI_REGION: ${{ secrets.OCI_CLI_REGION }}
     steps:
-      - name: Retrieve the OCID of a named compartment in tenancy
+      - name: Restart Instance
         uses: oracle-actions/run-oci-cli-command@v1.1.1
-        id: find-compartment-id
-        
         with:
-          command: 'iam compartment list --compartment-id-in-subtree=true'
-          query: "data[?name=='tsew'].id"
+          command: 'compute instance action --instance-id ocid1.instance.oc1.uk-london-1.anwgiljten2l5ticcmpdu6hqu3ctzaarfw2wnocelcjpuhvtjrq6nsd6yryq --action SOFTRESET'
           silent: 'False'
-
-      - name: Retrieve the display name and shape of the instances in my compartment
-        uses: oracle-actions/run-oci-cli-command@v1.1.1
-        id: find-instances
-        with:
-          command: 'compute instance list --compartment-id ${{ steps.find-compartment-id.outputs.raw_output }}'
-          query: 'data[*].{name: \"display-name\", shape: shape}'
-          silent: 'False'
-
-      - name: List the display name and shape of the instances in my compartment
-        run: |
-          echo ${{ steps.find-instances.outputs.output }} | jq .
