Update and rename docker-image.yml to docker-image2.yml

--- a/.github/workflows/docker-image2.yml
+++ b/.github/workflows/docker-image2.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile2 --tag demo-replace:latest
+      run: docker build . --build-arg USER="me" --build-arg PASSWORD="mySecurePa55" --file Dockerfile2 --tag demo-replace:latest
