--- a/Dockerfile2
+++ b/Dockerfile2
@@ -9,5 +9,6 @@ ENV PAT_PASSWORD=$PASSWORD
 COPY ["nuget.config", "nuget.config"]
 RUN cmd whoami
 RUN cmd ver
-RUN powershell (Get-Content August.PropertyManager.API\nuget.config).Replace("%PAT_USER%", $PAT_USER) | Set-Content August.PropertyManager.API\nuget.config
-RUN powershell (Get-Content August.PropertyManager.API\nuget.config).Replace("%PAT_PASSWORD%", $PAT_PASSWORD) | Set-Content August.PropertyManager.API\nuget.config
+RUN powershell (Get-Content nuget.config).Replace("%PAT_USER%", $PAT_USER) | Set-Content nuget.config
+RUN powershell (Get-Content nuget.config).Replace("%PAT_PASSWORD%", $PAT_PASSWORD) | Set-Content nuget.config
+RUN type nuget.config
