--- a/Dockerfile2
+++ b/Dockerfile2
@@ -7,6 +7,6 @@ ENV PAT_USER=$USER
 ENV PAT_PASSWORD=$PASSWORD
 
 COPY ["nuget.config", "nuget.config"]
-RUN (Get-Content nuget.config).Replace("%PAT_USER%", $PAT_USER) | Set-Content nuget.config
+RUN powershell (Get-Content nuget.config).Replace("%PAT_USER%", $PAT_USER) | Set-Content nuget.config
 RUN powershell (Get-Content nuget.config).Replace("%PAT_PASSWORD%", $PAT_PASSWORD) | Set-Content nuget.config
 RUN type nuget.config
