--- a/Dockerfile2
+++ b/Dockerfile2
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/windows/server:ltsc2022-KB5029250-amd64
+FROM mcr.microsoft.com/windows/servercore:ltsc2022
 
 WORKDIR /src
 ARG USER
