--- a/nuget.config
+++ b/nuget.config
@@ -1,2 +1,2 @@
-<add key="Username" value="%PAT_USER%" />
-<add key="ClearTextPassword" value="%PAT_PASSWORD%" />
+<add key="Username" value="PAT_USER" />
+<add key="ClearTextPassword" value="PAT_PASSWORD" />
