--- a/Dockerfile2
+++ b/Dockerfile2
@@ -1,4 +1,5 @@
-FROM mcr.microsoft.com/windows/servercore:ltsc2022
+#FROM mcr.microsoft.com/windows/servercore:ltsc2022
+FROM mcr.microsoft.com/dotnet/core/sdk
 
 WORKDIR /src
 ARG USER
