--- a/.github/workflows/call-scripts.yaml
+++ b/.github/workflows/call-scripts.yaml
@@ -1,32 +1,21 @@
-name: App Deploy
+name: Call Scripts
 
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Docker image tag to deploy'
-        required: true
-        default: 'master'
-      workspace:
-        description: 'Environment to deploy to on Azure'
-        required: true
-        default: 'Dev'
-        type: choice
-        options:
-          - Dev
-          - Test
-          - Pre-Prod
-          - Prod
-          - Load-Test
 
 jobs:
-  app-deploy:
-    name: 'App Deploy'
+  call-scripts:
+    name: 'Call Scripts'
     runs-on: ubuntu-latest
-    environment: ${{inputs.workspace}}
 
     steps:
     
-      - name: Deploy Dev to Azure Web App
-        run: echo "Deploying ${{ inputs.tag }} in ${{ inputs.workspace }}"
-        if: ${{ input
+      - name: Run Apple
+        run: ./apple.sh
+      
+      - name: Run Orange
+        run: ./scripts/orange.sh
+
+      - name: Run Banana
+        run: ./.github/banana.sh
+
