--- a/.github/workflows/call-scripts.yaml
+++ b/.github/workflows/call-scripts.yaml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
+      - uses: actions/checkout@v3    
+
       - name: Run Apple
         run: ./apple.sh
       
