--- a/.github/workflows/call-scripts.yaml
+++ b/.github/workflows/call-scripts.yaml
@@ -18,5 +18,5 @@ jobs:
         run: ./scripts/orange.sh
 
       - name: Run Banana
-        run: ./.github/banana.sh
+        run: ./.github/scripts/banana.sh
 
