--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
 
       - name: Docker pull check
-        run: docker pull ${{inputs.tag}}
+        run: docker pull ghcr.io/dfe-digital/childrens-social-care-cpd:${{inputs.tag}}
     
       - name: Deploy Dev to Azure Web App
         run: echo "Deploying ${{ inputs.tag }} in ${{ inputs.workspace }}"
