--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -31,6 +31,6 @@ jobs:
         with:
          repo: 'DFE-Digital/childrens-social-care-cpd-indexer'
          version: ${{ inputs.tag }}
-         file: "*\\.zip"
+         file: "*.zip"
          
             
