--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Fetch Github Release Asset
         uses: dsaltares/fetch-gh-release-asset@1.1.1
         with:
-         repo: 'DFE-Digital/childrens-social-care-cpd-indexer'
-         version: ${{ inputs.tag }}
+         repo: "DFE-Digital/childrens-social-care-cpd-indexer"
+         version: "tags/${{ inputs.tag }}"
          file: "*.zip"
          
             
