--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -30,8 +30,7 @@ jobs:
         uses: dsaltares/fetch-gh-release-asset@1.1.1
         with:
          repo: "DFE-Digital/childrens-social-care-cpd-indexer"
-         version: "tags/${{ inputs.tag }}"
+         version: "tags/v1.0.0"
          file: "release.zip"
+         token: ${{ secrets.GITHUB_TOKEN }}
          
-         
-            
