--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -27,7 +27,7 @@ jobs:
     environment: ${{ inputs.workspace }}
     steps:
       - name: Fetch release
-        run:  wget ${{ github.event.repository.url }}/archive/refs/tags/${{ inputs.tag }}.zip
+        run:  wget https://github.com/${{ github.event.repository.name }}/archive/refs/tags/${{ inputs.tag }}.zip
         
       - name: Deploy Function App
         run:  az functionapp deployment source config-zip --name ${{ vars.FAD_FUNCTION_APP_NAME }} --resource-group ${{ vars.FAD_RESOURCE_GROUP }} ${{ inputs.tag }}.zip
