--- a/.github/workflows/get-release.yml
+++ b/.github/workflows/get-release.yml
@@ -30,4 +30,4 @@ jobs:
         run:  wget https://github.com/albal/${{ github.event.repository.name }}/archive/refs/tags/${{ inputs.tag }}.zip
         
       - name: Deploy Function App
-        run:  az functionapp deployment source config-zip --name ${{ vars.FAD_FUNCTION_APP_NAME }} --resource-group ${{ vars.FAD_RESOURCE_GROUP }} ${{ inputs.tag }}.zip
+        run:  az functionapp deployment source config-zip --name ${{ vars.FAD_FUNCTION_APP_NAME }} --resource-group ${{ vars.FAD_RESOURCE_GROUP }} --src ${{ inputs.tag }}.zip
